k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productosjss-app
  labels:
    app: productosjss-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: productosjss-app
  template:
    metadata:
      labels:
        app: productosjss-app
    spec:
      containers:
        - name: productosjss
          image: reyessebastivn/productosjss:latest
          ports:
            - containerPort: 8081
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 10
