k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-db
spec:
  ports:
    - port: 3306
  selector:
    app: mysql-db
