k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: productosjss-service
spec:
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: productosjss-app
  type: ClusterIP
