k8s/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: productosjss-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productosjss-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - productosjss-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: productosjss-service
        port:
          number: 8081
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: productosjss-destinationrule
spec:
  host: productosjss-service
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
